Revised to include BCSRIF pdfs and multiple pdfs per project

--- a/pages/bcsrif/BCSRIF_2022_334.qmd
+++ b/pages/bcsrif/BCSRIF_2022_334.qmd
@@ -9,12 +9,12 @@ toc: true
 
 **Species Group:** Pacific Salmon  
 **Location:** Surrey, White Rock, Langley and surrounding areas  
-**Partners:** Fisheries and Oceans Canada’s Community Stream Monitoring network 
-DFO Community Advisors  
-Rivershed Society of BC
-A Rocha
-Semiahmoo Fish and Game Club
-Langley Environmental Partners Society
+**Partners:** Fisheries and Oceans Canada’s Community Stream Monitoring network;
+DFO Community Advisors;
+Rivershed Society of BC;
+A Rocha;
+Semiahmoo Fish and Game Club;
+Langley Environmental Partners Society;
 Streamkeepers groups  
 **Organization:** Salish Sea Indigenous Guardians Association  
 **Session(s):** Freshwater Stressors  
