--- a/pages/pssi/2397.qmd
+++ b/pages/pssi/2397.qmd
@@ -12,7 +12,7 @@ toc: true
 **Organization:** DFO  
 **Session(s):** Follow The Fish  
 **Presentation Date(s):** December 04, 2025  
-**Speakers:** Carrie Holt  
+**Speakers:** Jared Dick  
 **Abstract:**  
 Indigenous knowledge includes countless generations of place-based Pacific salmon experience that cannot be recreated or measured. Guided by the Eptuaptmumk (“Two-Eyed Seeing”) framework, we are partnering with First Nations on the West coast of Vancouver Island (WCVI) and University of Victoria to identify rebuilding targets and reference points for Chinook salmon that pair Indigenous Knowledge Systems with Western Science, based on interviews and focus groups with Indigenous Knowledge holders and a review of assessment literature.   
 
