--- a/pages/bcsrif/BCSRIF_2019_058.qmd
+++ b/pages/bcsrif/BCSRIF_2019_058.qmd
@@ -9,10 +9,8 @@ toc: true
 
 **Species Group:** Pacific Salmon  
 **Location:** Pacific Ocean  
-**Partners:** Moss Rock Foundation
-Dr. Steve Cooke (Carleton University)
-Ocean Tracking Network Canada
-... 24 in total from year-end report  
+**Partners:** Dr. Steve Cooke (Carleton University);
+Ocean Tracking Network Canada  
 **Organization:** Pacific Salmon Ecology and Conservation Laboratory, UBC  
 **Session(s):** Fisheries Monitoring And Harvest Methods  
 **Presentation Date(s):** December 09, 2025  
