--- a/pages/bcsrif/BCSRIF_2022_449.qmd
+++ b/pages/bcsrif/BCSRIF_2022_449.qmd
@@ -1,6 +1,5 @@
 ---
-title: "Analysis of forestry effects on Pacific salmon in Musgamagw Dzawada’enuxw territory and across
-coastal BC."
+title: "Cumulative effects of forest harvest on Pacific salmon productivity in coastal British Columbia"
 output-file: "BCSRIF_2022_449.html"
 Leads: "Salmon Coast Field Station Society"
 toc: true
@@ -11,11 +10,20 @@ toc: true
 **Species Group:** Pacific Salmon  
 **Location:** Broughton Archipelago.  
 **Partners:** None listed  
-**Organization:** Salmon Coast Field Station Society  
+**Organization:** University of Victoria  
 **Session(s):** Freshwater Stressors  
 **Presentation Date(s):** December 02, 2025  
 **Speakers:** Maria Kuruvilla  
 **Abstract:**  
-The project will be four components (i) provide a quantitative and qualitative history of forestry and salmon in Musgamagw Dzawada’enuxw territory, (ii) quantify the effects of forest harvesting histories on salmon abundance for all Pacific salmon species in coastal BC, (iii) establish a temperature, sedimentation, and dissolved oxygen monitoring system in salmon watersheds of Musgamagw Dzawada’enuxw territory to quantify stream temperatures and water quality in relation to forestry activity and support a centralized database of stream temperatures coast-wide initiated by the PSF, and (iv) develop a new non-invasive method for studying salmon stress responses using environmental DNA technology and applies it to salmon in relation to temperature and environmental variation across watersheds in Musgamagw Dzawada’enuxw territory. The project components will thus provide proximate empirical data on the environmental conditions of salmon habitats, salmon stress, growth, and immune responses to their stream environments, as well as population level relationships from salmon and forestry timeseries. The outcomes of the project will provide detailed histories of forestry and salmon in the watersheds of Musgamagw Dzawada’enuxw territory, new fieldwork with which to analyze how forestry practices and history interact with climate change to affect salmon, and a quantitative analysis of salmon population responses to forestry histories across the full British Columbia coast.   
+Industrial forest harvesting has altered the functioning of watersheds and aquatic habitats that support wild Pacific salmon for over a century, yet the population-level effects of forestry on salmon and the timescale for recovery remain uncertain. We reconstructed an annual time series of forest disturbance history for 1,746 watersheds with salmon population monitoring data in coastal British Columbia (BC) dating back to 1883, when forestry accelerated in the region, with cumulative disturbance to many watersheds today now exceeding 80%. A strong negative effect of forestry on chum salmon recruits per spawner was observed with productivity declines of 19-52% which exceed that predicted by changes to marine conditions for many populations. Forestry can cause shifts in watershed functioning that can last for decades leading to salmon population declines and long timescales for recovery.   
+
+**Bio:**  
+Maria Kuruvilla is a postdoctoral fellow in the Lewis Research Group, University of Victoria. She uses Bayesian statistical models to estimate the impact of forest harvesting on salmon population in coastal BC. Her work occasionally takes her to Salmon Coast Field Station, in the Broughton Archipelago. Maria completed her PhD in Quantitative Ecology and Resource Management at the University of Washington, Seattle. Her dissertation explored the effects of hatchery releases on salmon migration timing, providing evidence that juvenile salmon use social information to decide when to migrate. Additionally, she investigated various environmental factors influencing the migration timing of juvenile salmon.  
+
+**Collaborators:**  
+Salmon Coast Field Station, Musgamagw Dzawada’enuxw Fisheries Group Society, DFO, University of Toronto, Ecofish Research, University of Alberta, BC Ministry of Water, and Pacific Salmon Foundation  
+
+**Authors:**  
+Hocking, M.D., M. Kuruvilla, J. Braga, E.M. Atkinson, D. Greenberg, L. Krichel, O. Cornies, A. Buren, J. Speier, M. Nicolson, P. Tschaplinski, B. Connors, M. Lewis, A. Bateman, F.J.A. Lewis, R.M. Hechler, and M. Krkosek  
 
 
