--- a/pages/pssi/2397.qmd
+++ b/pages/pssi/2397.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Identifying good practices for considering Indigenous Knowledge in Rebuilding Plan targets and stock assessment reference poi"
+title: "Identifying good practices for considering Indigenous Knowledge in Rebuilding Plan targets and stock assessment reference points"
 output-file: "2397.html"
 Leads: "Carrie Holt"
 toc: true
