--- a/pages/pssi/2425.qmd
+++ b/pages/pssi/2425.qmd
@@ -12,7 +12,7 @@ toc: true
 **Organization:** DFO  
 **Session(s):** Freshwater Stressors  
 **Presentation Date(s):** December 02, 2025  
-**Speakers:** Keegan Patterson  
+**Speakers:** Keegan Paterson  
 **Abstract:**  
 Identifying individual and cumulative threats to salmon and their habitat is critical for effective management and restoration actions. This project estimates and maps nine human activities and landscape disturbance-based threats and four climate change-based threats for the stream network in the Fraser Basin. Results identify threat levels across salmon Conservation Units and the human activities and land uses that contributed most to threats.   
 
