--- a/pages/pssi/2397.qmd
+++ b/pages/pssi/2397.qmd
@@ -9,7 +9,7 @@ toc: true
 
 **Division:** Stock Assessment and Research (StAR)  
 **Section:** Quantitative Assessment Methods  
-**Organization:** DFO  
+**Organization:** Nuu-Chah-Nulth Tribal Council  
 **Session(s):** Follow The Fish  
 **Presentation Date(s):** December 04, 2025  
 **Speakers:** Jared Dick  
