--- a/pages/pssi/2513.qmd
+++ b/pages/pssi/2513.qmd
@@ -16,4 +16,11 @@ toc: true
 **Abstract:**  
 Recent studies found that West Coast Vancouver Island Chinook had some of the highest contaminant concentrations. This fish health monitoring project coordinates with the Follow the Fish program to sample for over 600 contaminants in juvenile Chinook to rank the results to prioritize mitigation actions.   
 
+## Project Bulletin
+
+<iframe src="../../data/PSSI_bulletin/2513.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
+
+<p style="text-align: center; margin-top: 10px;">
+[📄 Download PDF](../../data/PSSI_bulletin/2513.pdf){.btn .btn-primary target="_blank"}
+</p>
 
