--- a/index.qmd
+++ b/index.qmd
@@ -84,7 +84,7 @@ Join us this December for a series of online sessions sharing knowledge and outc
 Improving our understanding of the long-term implications of climate change for Pacific Salmon and their ecosystems.
 
 **Time:** 10AM-12PM  
-**Location:** Online Webinar | Pacific Science Enterprise Centre (PSEC), West Vancouver  
+**Location:** Online Webinar and Pacific Science Enterprise Centre (PSEC), West Vancouver  
 **Chair:** Patrick Thompson  
 [Register for Webinar](https://events.teams.microsoft.com/event/1f2df8a8-252e-47f7-8df1-a6096b1fa578@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
@@ -99,7 +99,7 @@ Improving our understanding of the long-term implications of climate change for 
 Mechanistic, physiological, and quantitative studies for evaluating stressors to freshwater habitats of Pacific salmon, including cumulative stressors.
 
 **Time:** 1PM-3PM  
-**Location:** Online Webinar |Pacific Science Enterprise Centre (PSEC), West Vancouver  
+**Location:** Online Webinar and Pacific Science Enterprise Centre (PSEC), West Vancouver  
 **Chair:** David Patterson  
 [Register for Webinar](https://events.teams.microsoft.com/event/1f2df8a8-252e-47f7-8df1-a6096b1fa578@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
@@ -121,7 +121,7 @@ Mechanistic, physiological, and quantitative studies for evaluating stressors to
 A review of the Follow the Fish Program, including methods and approaches for life cycle assessment of WCVI Chinook and ecosystem-scale research programs.
 
 **Time:** 9:30AM-12PM  
-**Location:** Online Webinar |Institute of Ocean Sciences (IOS), Sidney  
+**Location:** Online Webinar and Institute of Ocean Sciences (IOS), Sidney  
 **Chair:** Isobel Pearsall  
 [Register for Webinar](https://events.teams.microsoft.com/event/038709c6-a551-4faa-8957-8f56a8b7f32b@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
@@ -136,7 +136,7 @@ A review of the Follow the Fish Program, including methods and approaches for li
 Research on stressors in nearshore marine ecosystems and their effects on salmon survival.
 
 **Time:** 1PM-4PM  
-**Location:** Online Webinar |Institute of Ocean Sciences (IOS), Sidney  
+**Location:** Online Webinar and Institute of Ocean Sciences (IOS), Sidney  
 **Chair:** Cameron Freshwater  
 [Register for Webinar](https://events.teams.microsoft.com/event/038709c6-a551-4faa-8957-8f56a8b7f32b@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
@@ -194,7 +194,7 @@ Databases, analytic tools, and modelling projects that provide information to su
 Research on the genetic and fitness consequences of hatchery enhancment, and the interactions between hatchery and wild salmon.
 
 **Time:** 10AM-12PM  
-**Location:** Online Webinar |Pacific Biological Station (PBS), Nanaimo  
+**Location:** Online Webinar and Pacific Biological Station (PBS), Nanaimo  
 **Chair:** Tim Healy  
 [Register for Webinar](https://events.teams.microsoft.com/event/b685712a-d089-4f8f-8b6a-a6b7953ff0da@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
@@ -210,7 +210,7 @@ Research on the genetic and fitness consequences of hatchery enhancment, and the
 Tools and research to support monitoring and managing the health of cultured salmon.
 
 **Time:** 1PM-3PM  
-**Location:** Online Webinar |Pacific Biological Station (PBS), Nanaimo  
+**Location:** Online Webinar and Pacific Biological Station (PBS), Nanaimo  
 **Chair:** Christoph Deeg  
 [Register for Webinar](https://events.teams.microsoft.com/event/b685712a-d089-4f8f-8b6a-a6b7953ff0da@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
